fix(sharekernel): don't wrap text in table headers as well as in body

--- a/vino/sharekernel/static/css/vino.css
+++ b/vino/sharekernel/static/css/vino.css
@@ -107,7 +107,7 @@ img.vino-right {
     border-left: 0;
 }
 
-.table td {
+.table td, .table th {
     white-space: nowrap;
 }
 
